--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
   },
   "homepage": "https://github.com/navjeet4real/chat-app-backend#readme",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "express": "^4.18.2",
-    "morgan": "^1.10.0"
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^6.7.0",
+    "helmet": "^6.0.1",
+    "morgan": "^1.10.0",
+    "xss": "^1.0.14"
   }
 }
