--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 PORT = 8005
+DBPASSWORD = Wojtek%401942
+DBURI = mongodb+srv://navjeet4real:<PASSWORD>@wojtek.64jve6w.mongodb.net/?retryWrites=true&w=majority
