--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT = 8005
 DBPASSWORD = Wojtek%401942
 DBURI = mongodb+srv://navjeet4real:<PASSWORD>@wojtek.64jve6w.mongodb.net/?retryWrites=true&w=majority
+SECRET_KEY = an39W~Jc#a@Nnv'AqVln:oxd=#@T<4O"s~WvY._MLvbbHO9z!Jb:'%24@~b37o6
