--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 PORT = 8005
-DBPASSWORD = Wojtek%401942
-DBURI = mongodb+srv://navjeet4real:<PASSWORD>@wojtek.64jve6w.mongodb.net/?retryWrites=true&w=majority
+DBPASSWORD = MECXbJt70NY4hHr4
+DBURI = mongodb+srv://navjeet4real:<password>@cluster0.lxyjsdo.mongodb.net/?retryWrites=true&w=majority
 SECRET_KEY = an39W~Jc#a@Nnv'AqVln:oxd=#@T<4O"s~WvY._MLvbbHO9z!Jb:'%24@~b37o6
 
-SG_MAIL_KEY = dfberhgergherggerggerggerrgerrgergvergvrefgv
+SENDGRID_API_KEY='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'
