--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 PORT = 8005
 DBPASSWORD = MECXbJt70NY4hHr4
-DBURI = mongodb+srv://navjeet4real:<password>@cluster0.lxyjsdo.mongodb.net/?retryWrites=true&w=majority
+DBURI = mongodb+srv://navjeet4real:MECXbJt70NY4hHr4@cluster0.oy0a150.mongodb.net/?retryWrites=true&w=majority
 SECRET_KEY = an39W~Jc#a@Nnv'AqVln:oxd=#@T<4O"s~WvY._MLvbbHO9z!Jb:'%24@~b37o6
 
 SENDGRID_API_KEY='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'
