--- a/package.json
+++ b/package.json
@@ -33,6 +33,6 @@
     "mongoose": "^6.8.4",
     "morgan": "^1.10.0",
     "otp-generator": "^4.0.0",
-    "xss": "^1.0.14"
+    "xss-clean": "^0.1.1"
   }
 }
