--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 # dependencies
 /node_modules
 /.pnp
-.pnp.js
 /config.env
+.pnp.js
 # testing
 /coverage
 
@@ -20,4 +20,4 @@
 
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
+yarn-error.log*`
