--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongoose": "^6.8.4",
     "morgan": "^1.10.0",
     "otp-generator": "^4.0.0",
+    "socket.io": "^4.6.1",
     "xss-clean": "^0.1.1"
   }
 }
